@@ -1,14 +1,11 @@
 package org.spoofax.jsglr2.incremental;
 
-
-import static com.google.common.collect.Iterables.isEmpty;
 import static com.google.common.collect.Iterables.size;
 import static org.metaborg.util.iterators.Iterables2.stream;
 import static org.spoofax.jsglr2.incremental.IncrementalParse.NO_STATE;
 
 import java.util.Collections;
 import java.util.HashMap;
-import java.util.LinkedList;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -16,9 +13,9 @@ import org.metaborg.parsetable.IParseTable;
 import org.metaborg.parsetable.actions.ActionType;
 import org.metaborg.parsetable.actions.IAction;
 import org.metaborg.parsetable.actions.IReduce;
-import org.metaborg.parsetable.actions.IShift;
 import org.spoofax.jsglr2.incremental.actions.GotoShift;
-import org.spoofax.jsglr2.incremental.diff.SingleDiff;
+import org.spoofax.jsglr2.incremental.diff.IStringDiff;
+import org.spoofax.jsglr2.incremental.diff.JGitHistogramDiff;
 import org.spoofax.jsglr2.incremental.lookaheadstack.ILookaheadStack;
 import org.spoofax.jsglr2.incremental.parseforest.IncrementalDerivation;
 import org.spoofax.jsglr2.incremental.parseforest.IncrementalParseForest;
@@ -46,7 +43,7 @@ public class IncrementalParser
     private final IncrementalParseFactory<StackNode, Parse> incrementalParseFactory;
     private final HashMap<String, IncrementalParseForest> cache = new HashMap<>();
     private final HashMap<String, String> oldString = new HashMap<>();
-    private final SingleDiff diff;
+    private final IStringDiff diff;
 
     public IncrementalParser(ParseFactory<IncrementalParseForest, StackNode, Parse> parseFactory,
         IncrementalParseFactory<StackNode, Parse> incrementalParseFactory, IParseTable parseTable,
@@ -55,9 +52,8 @@ public class IncrementalParser
 
         super(parseFactory, parseTable, stackManager, parseForestManager, reduceManagerFactory);
         this.incrementalParseFactory = incrementalParseFactory;
-        // TODO different diffing types, probably based on:
-        // https://en.wikipedia.org/wiki/Longest_common_subsequence_problem
-        this.diff = new SingleDiff();
+        // TODO parametrize parser on diff algorithm for benchmarking
+        this.diff = new JGitHistogramDiff();
     }
 
     @Override protected Parse getParse(String inputString, String filename) {
@@ -81,9 +77,9 @@ public class IncrementalParser
         Iterable<IAction> actions = getActions(stack, parse);
         // Break down lookahead until it is a terminal or until there is something to be shifted
         // Break down lookahead if it has no state or if there are no actions for it
-        // TODO Maybe: break down lookahead if parse.multipleStates?
+        // Break down lookahead if there is more then one action for it
         while(!parse.lookahead.get().isTerminal()
-            && (lookaheadHasNoState(parse.lookahead) || isEmpty(actions) && parse.forShifter.isEmpty())) {
+            && (lookaheadHasNoState(parse.lookahead) || size(actions) != 1 && parse.forShifter.isEmpty())) {
             parse.lookahead.leftBreakdown();
             actions = getActions(stack, parse);
         }
@@ -113,13 +109,13 @@ public class IncrementalParser
             return actions;
         } else {
             // Split in shift and reduce actions
-            List<IShift> shiftActions = stream(actions).filter(a -> a.actionType() == ActionType.SHIFT)
-                .map(a -> ((IShift) a)).collect(Collectors.toList());
+            List<IAction> shiftActions =
+                stream(actions).filter(a -> a.actionType() == ActionType.SHIFT).collect(Collectors.toList());
 
             // By default, only the reduce actions are returned
-            LinkedList<IAction> result = stream(actions)
+            List<IAction> result = stream(actions)
                 .filter(a -> a.actionType() == ActionType.REDUCE || a.actionType() == ActionType.REDUCE_LOOKAHEAD)
-                .map(a -> ((IReduce) a)).collect(Collectors.toCollection(LinkedList::new));
+                .collect(Collectors.toList());
 
             IncrementalParseNode lookaheadNode = (IncrementalParseNode) lookahead;
 
@@ -140,8 +136,8 @@ public class IncrementalParser
             // If lookahead has null yield and the production of lookahead matches the state of the GotoShift,
             // there is a duplicate action that can be removed (this is an optimization to avoid multipleStates == true)
             if(!lookaheadNode.isAmbiguous() && lookaheadNode.width() == 0 && result.size() == 2 && hasGotoShift
-                && nullReduceMatchesGotoShift(stack, (IReduce) result.getFirst(), (GotoShift) result.getLast())) {
-                result.removeFirst(); // Removes the unnecessary reduce action
+                && nullReduceMatchesGotoShift(stack, (IReduce) result.get(0), (GotoShift) result.get(1))) {
+                result.remove(0); // Removes the unnecessary reduce action
             }
 
             return result;
